tests/paczka1/small_fuzzy/47125972.err
Error in line 1: dzwycv5uj S208 31,2
Error in line 2: dzwycv5uj A871 76,0
